--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+}
+body {
+  background: rgb(251, 151, 63);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  background: black;
+  color: rgb(251, 151, 63);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  padding: 10px 10px;
+  font-family: cursive;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  margin: auto;
+  padding: 50px 0;
+  transition: .5s;
 }
 
-.App-link {
-  color: #61dafb;
+header .header:hover {
+  color: black;
+  background-color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.iconn {
+  padding-right: 10px;
+  font-size: 70px;
+  padding-top: 20px;
+  cursor: pointer;
 }
+
+.iconn:hover {
+  color: burlywood;
+}
+
+.headerTitle {
+  cursor: pointer;
+  padding:30px 0 ;
+}
+
+.search-area form {
+  width: 500px;
+  margin: 190px auto;
+  padding: 20px 0px 20px 140px;
+  
+}
+
+.search-area button {
+  display: inline;
+  background: #343a40;
+  color: #fff;
+  border: none;
+  padding: 8px 13px 10px 13px;
+  margin: 0 15px 0 0;
+  position: relative;
+  top: -2px;
+  cursor: pointer;
+}
+
+input {
+  width: 75%;
+  padding: 5px;
+  font-size: 1em;
+  background-color: violet;
+}
+
+/* .list {
+  display: grid;
+  margin: 20px 0 50px 0;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 1fr;
+  grid-gap: 1em;
+} */
+
+
+.list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+
+.gallery img {
+  width: 100%;
+}
+
+.card-container {
+  display: inline-flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-between;
+  width: 250px;
+  border: 1px solid rgba(0,0,0,.125);
+  margin: 0 auto;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.desc {
+  height: 130px;
+  padding: 10px;
+}
+
+.desc h2 {
+  font-size: 1em;    
+  font-weight: 400;
+}
+.desc h3, p {
+  font-weight: 300;
+}
+
+.desc h3 {
+  color: #6c757d;
+  font-size: 1em;
+  font-weight: 300;
+  padding: 10px 0 10px 0;
+}
+
+.desc p {
+  color: #6c757d;
+}
+
+img {
+  width: 100%;
+  height: 250px;
+}
+
